--- a/.gitignore
+++ b/.gitignore
@@ -1,88 +1,6 @@
-# VS Code settings
-.vscode/*
-!.vscode/extensions.json
-# settings.json is intentionally ignored as it contains user-specific settings
-
-# Editor backups and temporary files
-*~
-*.bak
-*.swp
-*.swo
-*.tmp
-.DS_Store
-Thumbs.db
-
-# WSL and script specific files
-.bash_history
-.zsh_history
-.zcompdump*
-.npm/
-.node_repl_history
-.python_history
-.lesshst
-.viminfo
-.wget-hsts
-.ssh/
-.gnupg/
-
-# Neovim
-.netrwhist
-
-# Ansible
-*.retry
-
-# Temp files that might be created during script execution
-*.log
-
-# Environment specific files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# User-specific files
-.lesshst
-.viminfo
-
-# Testing and coverage
-.coverage
-htmlcov/
-.tox/
-.nox/
-coverage/
-.hypothesis/
-.pytest_cache/ 
-
-# Research
+.cursor
+.vscode
 Research
+
+
 
